--- a/assignment-components.html
+++ b/assignment-components.html
@@ -11,10 +11,18 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
      <script type="text/babel">
           class Paragraph extends React.Component {
+            constructor(props){
+              super(props);
+              this.state = {
+                number: 1
+              }
+            }
             render() {
               return (
                 <div>
                   <p>Here is another paragraph that I'm adding using React. Let's see if my code works.</p>
+                  <p>Current week: {this.state.number}</p>
+                  <p>Current label: {this.props.label}</p>
                   </div>
               )
             }
